<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.healthy.library.widget.StatusLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpUsage"
        tools:status_init="content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/phoneLL"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="28dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/login_phone_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/phoneTips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="请正确输入手机号"
                        android:textColor="#fffa3c5a"
                        android:textSize="12sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_del"
                        app:layout_constraintLeft_toRightOf="@+id/et_phone"
                        app:layout_constraintRight_toLeftOf="@+id/iv_del"
                        app:layout_constraintTop_toTopOf="@+id/iv_del" />

                    <ImageView
                        android:id="@+id/iv_del"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/app_name"
                        android:padding="10dp"
                        android:src="@drawable/app_ic_del"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/din_medium"
                        android:hint="@string/app_input_phone_hint"
                        android:inputType="number"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="0dp"
                        android:textColor="#333333"
                        android:textColorHint="#999999"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/phone_icon"
                        app:layout_constraintRight_toLeftOf="@id/phoneTips"
                        app:layout_constraintTop_toTopOf="parent"

                        tools:ignore="TextFields" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#E3E7EF"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pwdLL"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="28dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneLL">

                    <ImageView
                        android:id="@+id/pwd_code"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/login_pwd_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@null"
                        android:fontFamily="@font/din_medium"
                        android:hint="请输入您的密码"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="0dp"
                        android:textColor="#333333"
                        android:textColorHint="#999999"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/pwd_code"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#E3E7EF"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <ImageView
                        android:id="@+id/pwdVisible"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:padding="10dp"
                        android:src="@drawable/login_password_gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="28dp"
                    android:alpha="0.5"
                    android:background="@drawable/shape_select_servive_btn"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/app_login"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneLL" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/selectLayout"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.healthy.library.widget.AutoFitCheckBox
                    android:id="@+id/selectImg"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="10dp"
                    android:src="@drawable/selector_login_checked">

                </com.healthy.library.widget.AutoFitCheckBox>

                <TextView
                    android:id="@+id/tv_protocol_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="我已阅读并同意"
                    android:textColor="#333333"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="showProtocol"
                    android:text="@string/app_protocol_detail"
                    android:textColor="#FF4D66"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_protocol_tmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="和"
                    android:textColor="#333333"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_protocol2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="showProtocol2"
                    android:text="《隐私政策》"
                    android:textColor="#FF4D66"
                    android:textSize="12dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.healthy.library.widget.StatusLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


